Fixed background color of overlayed Alert when high contrast mode (#1076)
Enact-DCO-1.0-Signed-off-by: Seungcheon Baek (sc.baek@lge.com)

--- a/styles/skin.less
+++ b/styles/skin.less
@@ -7,14 +7,14 @@
 	@import "./color-mixins.less";
 
 	// Neutral Skin
-	:global(.neutral) & {
+	&:global(.neutral) {
 		// Load the sandstone neutral rules into this scope
 		@import (multiple) "./colors.less";
 
 		@componentRules();
 
 		// High Contrast Variant
-		:global(.enact-a11y-high-contrast):global(.highContrast)& {
+		:global(.enact-a11y-high-contrast) &:global(.highContrast) {
 			@import "./colors-highcontrast.less";
 
 			@componentRules();
@@ -22,7 +22,7 @@
 	}
 
 	// Light Skin
-	:global(.light) & {
+	&:global(.light) {
 		@import (multiple) "./colors.less";
 		@import "./colors-light.less";
 
@@ -30,7 +30,7 @@
 	}
 
 	// Custom Skin
-	:global(.custom) & {
+	&:global(.custom) {
 		@import (multiple) "./colors.less";
 		@import "./colors-custom.less";
 
